--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,9 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
+# Compiled binary
 build/Release
+lib/
 
 # Dependency directories
 node_modules/
