--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "code-owners-api",
-  "version": "1.0.0",
-  "description": "A lightweight npm module to interact with github codeowners",
-  "main": "lib/index.js",
-  "types": "lib/index.d.js",
-  "scripts": {
-    "build": "tsc -p tsconfig.json"
-  },
-  "devDependencies": {
-    "@types/anymatch": "^1.3.0",
-    "@types/joi": "^10.4.0",
-    "@types/node": "^9.4.7",
-    "typescript": "^2.4.2"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@octokit/rest": "^15.2.4",
-    "anymatch": "^2.0.0"
-  }
+    "name": "code-owners-api",
+    "version": "1.0.0",
+    "description": "A lightweight npm module to interact with github codeowners",
+    "main": "lib/index.js",
+    "types": "lib/index.d.js",
+    "scripts": {
+        "build": "tsc -p tsconfig.json",
+        "precommit": "lint-staged"
+    },
+    "devDependencies": {
+        "@types/anymatch": "^1.3.0",
+        "@types/joi": "^10.4.0",
+        "@types/node": "^9.4.7",
+        "husky": "^0.14.3",
+        "lint-staged": "^7.0.0",
+        "prettier": "^1.11.1",
+        "typescript": "^2.4.2"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@octokit/rest": "^15.2.4",
+        "anymatch": "^2.0.0"
+    },
+    "lint-staged": {
+        "*.{js,ts}": ["prettier --single-quote --trailing-comma es5 --no-bracket-spacing --write", "git add"]
+    }
 }
