--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
         "anymatch": "^2.0.0"
     },
     "lint-staged": {
-        "*.{js,ts}": ["prettier --single-quote --tab-width 4 --trailing-comma es5 --no-bracket-spacing --write", "git add"]
+        "*.{js,ts}": ["prettier --single-quote --tab-width 4 --trailing-comma es5 --no-bracket-spacing --print-width 120 --write", "git add"]
     }
 }
