--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
         "watch": "tsc -w -p tsconfig.json",
         "precommit": "lint-staged",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prepush": "npm run test"
     },
     "devDependencies": {
         "@types/anymatch": "^1.3.0",
+        "@types/jest": "^22.2.1",
         "@types/joi": "^10.4.0",
         "@types/node": "^9.4.7",
         "husky": "^0.14.3",
+        "jest": "^22.4.3",
         "lint-staged": "^7.0.0",
         "prettier": "^1.11.1",
         "typescript": "^2.4.2"
@@ -24,9 +27,7 @@
     "license": "MIT",
     "dependencies": {
         "@octokit/rest": "^15.2.4",
-        "@types/jest": "^22.2.0",
-        "anymatch": "^2.0.0",
-        "jest": "^22.4.3"
+        "anymatch": "^2.0.0"
     },
     "lint-staged": {
         "*.{js,ts}": [
