--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "watch": "tsc -w -p tsconfig.json",
         "precommit": "lint-staged",
         "test": "jest",
-        "test:watch": "jest --watch",
-        "prepush": "npm run test",
-        "prepare": "npm run build"
+        "test:watch": "jest --watch"
     },
     "devDependencies": {
         "@types/anymatch": "^1.3.0",
